# Milling-Simulation

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/FileStorage/: CMakeLists.txt  STLFile.cpp  STLFile.h  STLFile_test.cpp
src/GLCompute/: CMakeLists.txt  GLCompute.cpp  GLCompute.h  computeShaders.qrc
src/GLCompute/computeShaders/: STL2SDF.comp  STL2UDF.comp
src/SDFOctree/: CMakeLists.txt  SDFOctant.h  SDFOctantLeaf.h  SDFOctantNode.h  SDFOctree.h
src/UI/: CMakeLists.txt  ChartMRR.cpp  ChartMRR.h  DialogAddCutter.cpp  DialogAddCutter.h  DialogAddNCProgramManual.cpp  DialogAddNCProgramManual.h  DialogAddWorkpieceManual.cpp  DialogAddWorkpieceManual.h  DialogAutodiff.cpp  DialogAutodiff.h  DialogSettings.cpp  DialogSettings.h  DockWidget.cpp  DockWidget.h  GLWidget.cpp  GLWidget.h  GLWidgetCutter.cpp  GLWidgetCutter.h  ListViewCutter.cpp  ListViewCutter.h  ListViewNCProgram.cpp  ListViewNCProgram.h  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  ObjectLanguage.cpp  ObjectLanguage.h  ObjectMilling.cpp  ObjectMilling.h  Settings.cpp  Settings.h  StatusBar.cpp  StatusBar.h  TabWidgetProcedure.cpp  TabWidgetProcedure.h  ToolBarAnimation.cpp  ToolBarAnimation.h  ToolBarCreation.cpp  (+10 more)
src/UI/ncs/: 20220618.nc  5axis.nc  BDD.nc  banlei5.nc  multicutter.nc  pentagram.nc  saddle.nc  vase.nc
src/UI/stls/: BDD-blank.stl  vase-blank.stl
src/UI/translations/: i18n_en.ts  i18n_zh.ts
src/app/: CMakeLists.txt  main.cpp
src/milling/: CMakeLists.txt  Cutter.cpp  Cutter.h  CutterFactory.cpp  CutterFactory.h  CutterSweptVolume.cpp  CutterSweptVolume.h  GeometryMilling.cpp  GeometryMilling.h  NCProgram.cpp  NCProgram.h  Parameter.h  Workpiece.cpp  Workpiece.h
src/milling/Cutters/: CutterAPT.cpp  CutterAPT.h  CutterAPT_test.cpp  CutterBallEndmill.cpp  CutterBallEndmill.h  CutterFilletEndmill.cpp  CutterFilletEndmill.h  CutterFilletTaperEndmill.cpp  CutterFilletTaperEndmill.h  CutterFilletTaperEndmill_test.cpp  CutterFlatEndmill.cpp  CutterFlatEndmill.h  CutterStrange.cpp  CutterStrange.h  CutterTaperEndmill.cpp  CutterTaperEndmill.h  CutterTaperFilletEndmill.cpp  CutterTaperFilletEndmill.h
src/milling/NCProgramStates/: NCProgramStateG0.cpp  NCProgramStateG0.h  NCProgramStateG01.cpp  NCProgramStateG01.h  NCProgramStateG02.cpp  NCProgramStateG02.h  NCProgramStateG03.cpp  NCProgramStateG03.h  NCProgramStateNone.cpp  NCProgramStateNone.h
src/render/: CMakeLists.txt  Camera.cpp  Camera.h  Render.cpp  Render.h  RenderAutodiff.cpp  RenderAutodiff.h  RenderCWE.cpp  RenderCWE.h  RenderCutter.cpp  RenderCutter.h  shaders.qrc
src/render/shaders/: Autodiff.frag  Autodiff.vert  Axis.frag  Axis.geom  Axis.vert  Cutter.frag  Cutter.vert  WorkpieceSurface.vert  WorkpieceSurfaceUsingDistance.frag  WorkpieceSurfaceUsingDistance.geom  WorkpieceSurfaceUsingDistance.vert  WorkpieceWireframe.frag  WorkpieceWireframe.geom  WorkpieceWireframe.vert
src/utils/: AABB3D.h  BBox3D.h  CMakeLists.txt  Filter.h  MarchingCubes.h  Morton.h  OBB3D.h  Posture.h  Posture_test.cpp  Triangle3D.h  Triangle3D_test.cpp  TrilinearInterpolation.h  Vector3D.h  utils.h
